<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".AddIncomeActivity">

    <TextView
        android:id="@+id/tvDateAE"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:drawablePadding="8dp"
        android:background="@color/dashboardtop"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/etNameAE"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:background="@drawable/edittext"
        android:hint="Name"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>


    <EditText
        android:id="@+id/etAmountAE"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:background="@drawable/edittext"
        android:hint="0 NPR"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>



    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Choose expense category..."
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/spCategoryAE"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Choose Account..."
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/spAccountAE"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:id="@+id/etDayE"
        android:layout_width="12dp"
        android:layout_height="12dp"/>
    <EditText
        android:id="@+id/etMonthE"
        android:layout_width="12dp"
        android:layout_height="12dp"/>
    <EditText
        android:id="@+id/etYearE"
        android:layout_width="12dp"
        android:layout_height="12dp"/>

    <EditText
        android:id="@+id/etNoteAE"
        android:layout_width="359dp"
        android:layout_height="0dp"
        android:background="@drawable/addnote"
        android:hint="Add note .."
        android:layout_weight="1"
        android:gravity="top"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>


<!--    <Button-->
<!--        android:id="@+id/btnSaveExpense"-->
<!--        android:text="Save"-->
<!--      -->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:elevation="10dp"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:background="@color/white"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->
    <Button
        android:id="@+id/btnSaveAE"
        android:text="Save"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="10dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>